--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,18 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.deeplearning4j</groupId>
+			<artifactId>deeplearning4j-core</artifactId>
+			<version>0.5.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.deeplearning4j</groupId>
+			<artifactId>deeplearning4j-nlp</artifactId>
+			<version>0.5.0</version>
+		</dependency>
+
 
 		<!-- test dependencies -->
 		<dependency>
