Minimal changes in the pom.xml files in the app.

--- a/PaperNotesAndRecomendationsService/pom.xml
+++ b/PaperNotesAndRecomendationsService/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>com.brko.service</artifactId>
     <packaging>jar</packaging>
 
-    <name>com.brko.service</name>
+    <name>BrkoServiceJava</name>
     <url>http://maven.apache.org</url>
 
     <properties>
