--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	</modules>
     <packaging>pom</packaging>
 
-	<name>com.brko.parent</name>
+	<name>BrkoParentProject</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
