--- a/PaperNotesAndRecomendationsWeb/package.json
+++ b/PaperNotesAndRecomendationsWeb/package.json
@@ -20,6 +20,7 @@
     "html-entities": "1.2.0",
     "lodash": "4.16.2",
     "react": "15.3.2",
+    "react-bootstrap": "^0.30.5",
     "react-custom-scrollbars": "4.0.0",
     "react-dom": "15.3.2",
     "react-icheck": "0.3.5",
@@ -27,7 +28,8 @@
     "react-router": "2.8.1",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.4.1",
