--- a/PaperNotesAndRecomendationsWeb/package.json
+++ b/PaperNotesAndRecomendationsWeb/package.json
@@ -19,6 +19,7 @@
     "dateformat": "1.0.12",
     "html-entities": "1.2.0",
     "lodash": "4.16.2",
+    "rc-checkbox": "^1.4.2",
     "react": "15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-custom-scrollbars": "4.0.0",
