--- a/PaperNotesAndRecomendationsWeb/src/main/webapp/WEB-INF/web.xml
+++ b/PaperNotesAndRecomendationsWeb/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <!-- ====================================================================== -->
     <filter>
         <filter-name>cors-filter</filter-name>
-        <filter-class>com.brko.web.interceptors.CorsFilter</filter-class>
+        <filter-class>com.brko.web.config.security.interceptors.CorsFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>cors-filter</filter-name>
