--- a/PaperNotesAndRecomendationsWeb/package.json
+++ b/PaperNotesAndRecomendationsWeb/package.json
@@ -29,6 +29,7 @@
     "react-router": "2.8.1",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
+    "redux-persist": "^4.0.0-alpha7",
     "redux-thunk": "2.1.0",
     "whatwg-fetch": "^1.0.0"
   },
